# tb4_snaps

./: README.md
tb4_desktop_snap/: tb4_desktop.repositories
tb4_desktop_snap/snap/: snapcraft.yaml
tb4_robot_snap/: tb4_robot.repositories
tb4_robot_snap/snap/: snapcraft.yaml
tb4_robot_snap/snap/hooks/: configure  connect-plug-gpio  connect-plug-hardware-observe  connect-plug-i2c  connect-plug-serial-port  install  plugs-helper
tb4_robot_snap/turtlebot4_snap/: CMakeLists.txt  package.xml
tb4_robot_snap/turtlebot4_snap/launch/: mapping.launch.py  navigation.launch.py
tb4_snap/: ign_ros2_control.repositories  navigation2.repositories  tb4.repositories
tb4_snap/snap/: snapcraft.yaml
tb4_snap/turtlebot4_snap/launch/: simulation_pure_localization.launch.py
