<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_snap</name>
  <version>0.0.0</version>
  <description>Turtlebot4 snap</description>
  <maintainer email="guillaume.beuzeboc@canonical.com">gbeuzeboc</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- commented due to a rosdep bug in snapcraft -->
  <!--exec_depend>turtlebot4_navigation</exec_depend-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
